# html5ever

./: Cargo.toml
capi/: common.rs  html5ever.h  lib.rs  test-capi.c  tokenizer.rs
examples/: tokenize-example.rs  tree-print-example.rs
macros/: named_entities.rs
macros/src/: lib.rs
src/: html5.rs  lib.rs
src/serialize/: mod.rs
src/sink/: common.rs  owned_dom.rs  rcdom.rs
src/tokenizer/: buffer_queue.rs  interface.rs  mod.rs
src/tree_builder/: actions.rs  interface.rs  mod.rs  rules.rs
src/util/: atom.rs
src/util/atom/: data.rs  mod.rs
test/: lib.rs  tokenizer.rs
tests/: tokenizer.rs
