[package]

name = "html5ever"
version = "0.0.0"
authors = [ "The html5ever Project Developers" ]

[dependencies.phf]
git = "https://github.com/sfackler/rust-phf"
[dependencies.phf_mac]
git = "https://github.com/sfackler/rust-phf"

[dependencies.string_cache]
git = "file:///home/keegan/string-cache"
rev = "cargo"
[dependencies.string_cache_macros]
git = "file:///home/keegan/string-cache"
rev = "cargo"

[dependencies.html5ever-macros]
path = "macros"

[[test]]
name = "html5ever-external-test"
